apps/kopic/prod/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kopic-client-ingress
  namespace: kopic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jhhomehub.gonetis.com
        - kopic.app
        - www.kopic.app
  rules:
    - host: jhhomehub.gonetis.com
      http:
        paths:
          - path: /kopic
            pathType: Prefix
            backend:
              service:
                name: kopic-client
                port:
                  number: 80
    - host: kopic.app
      http:
        paths:
          - path: /kopic
            pathType: Prefix
            backend:
              service:
                name: kopic-client
                port:
                  number: 80
    - host: www.kopic.app
      http:
        paths:
          - path: /kopic
            pathType: Prefix
            backend:
              service:
                name: kopic-client
                port:
                  number: 80
